# smallbasic.plugins

./: .gitmodules  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  supressions.txt
canvas/: Makefile.am  main.cpp
clipboard/: Makefile.am  clipboard.c  main.cpp
clipboard/samples/: clip.bas
debug/: Makefile.am  main.cpp
gifenc/: Makefile.am  main.cpp
gifenc/samples/: gifenc.bas
glfw/: Makefile.am  main.cpp
glfw/glad/include/glad/: glad.h
glfw/glad/src/: glad.cpp
glfw/samples/: game.bas
gtk-server/: Makefile.am  gtk-server.c  gtk-server.cfg  main.cpp
gtk-server/samples/: demo.bas  gtk.bas
imgui/: Makefile.am  main.cpp
imgui/samples/: demo.bas
include/: apiexec.cpp  hashmap.cpp  hashmap.h  javaproxy.h  module.h  param.cpp  (+3 more)
ioio/: Makefile.am  README-build.md  README.md  api.json  build.gradle  log.h  main.cpp  mkapi.bas  mkdoc.bas  pom.xml  sbasic.sh  settings.gradle
ioio/ioio/: Android.mk  build.gradle  patch.sh  pom.xml
ioio/ioio/src/main/: AndroidManifest.xml
ioio/ioio/src/main/java/ioio/lib/: AndroidUtil.java  RuntimeUtil.java
ioio/ioio/src/main/java/ioio/lib/android/: AccessoryConnectionBootstrap.java  AndroidLogger.java  AndroidUtil.java  IOIOLoader.java  UsbManagerAdapter.java
ioio/ioio/src/main/java/ioio/lib/android/accessory/: AccessoryConnectionBootstrap.java  Adapter.java
ioio/ioio/src/main/java/ioio/lib/spi/: LogImpl.java
ioio/ioio/src/main/java/ioio/smallbasic/: AnalogInputImpl.java  CapSenseImpl.java  ConnectionController.java  Consumer.java  DigitalInputImpl.java  DigitalOutputImpl.java  Function.java  IOIOException.java  IOIOImpl.java  IOLock.java  IOService.java  IOTask.java  IOUtil.java  PulseInputImpl.java  PwmOutputImpl.java  SequencerImpl.java  SpiMasterImpl.java  TimerUtil.java  TwiMasterImpl.java
ioio/ioio/src/main/java/ioio/smallbasic/android/: AccessoryConnectionBootstrap.java  AccessoryPermissionCheck.java  AccessoryPermissionManager.java  AndroidLogger.java  BluetoothConnection.java  FixedReadBufferedInputStream.java  IOIOLoader.java  ModuleLoader.java  UsbConnection.java  UsbUtil.java
ioio/ioio/src/main/java/ioio/smallbasic/pc/: HexDump.java  LoggingInputStream.java  LoggingOutputStream.java  SerialPortIOIOConnection.java  SerialPortIOIOConnectionBootstrap.java
ioio/ioio/src/main/java/net/sourceforge/smallbasic/ioio/: AnalogInputImpl.java  CapSenseImpl.java  ConnectionController.java  DigitalInputImpl.java  DigitalOutputImpl.java  Function.java  IOIOImpl.java  IOIOLoader.java  IOLock.java  IOService.java  PulseInputImpl.java  PwmOutputImpl.java  SpiMasterImpl.java  TimerUtil.java  TwiMasterImpl.java
ioio/ioio/src/test/java/ioio/smallbasic/: AnalogInputTest.java  DigitalOutputTest.java
ioio/ioio/src/test/java/net/sourceforge/smallbasic/ioio/: DigitalOutputTest.java
ioio/samples/: bh1750.bas  bme280.bas  button.bas  duino-1088AS.bas  hd44780.bas  led.bas  mpu6050.bas  pwm.bas  slider-pot.bas  ssd1306.bas  st7735s.bas  st7789.bas  veml6030.bas
ioio/src/main/java/ioio/: PausedInputStream.java  TimerUtil.java
ioio/src/main/java/ioio/lib/pc/: PausedInputStream.java  SerialPortIOIOConnection.java  SerialPortIOIOConnectionBootstrap.java  Timer.java
ioio/src/main/java/ioio/lib/spi/: LogImpl.java
ioio/src/main/java/net/sourceforge/smallbasic/ioio/: AbstractLooper.java  AbstractLooperProvider.java  AnalogInput.java  AnalogInputImpl.java  AnalogInputLooper.java  CapSense.java  CapSenseImpl.java  ConnectionController.java  Consumer.java  DigitalInput.java  DigitalInputImpl.java  DigitalOutput.java  DigitalOutputImpl.java  DigitalOutputLooper.java  FloatConsumer.java  Function.java  IOIOImpl.java  IOLock.java  IOService.java  IOTask.java  PulseInput.java  PulseInputImpl.java  PwmOutput.java  PwmOutputImpl.java  SpiMasterImpl.java  TwiMasterImpl.java
ioio/src/main/java/net/sourceforge/smallbasic/ioio/input/: AnalogInput.java  AnalogInputLooper.java
ioio/src/main/java/net/sourceforge/smallbasic/ioio/output/: DigitalOutput.java  DigitalOutputLooper.java
ioio/src/test/java/net/sourceforge/smallbasic/ioio/: AnalogInputTest.java  DigitalOutputTest.java
llama/: CMakeLists.txt  RAG.md  README.md  chunk_headers.cpp  llama-sb-rag.cpp  llama-sb-rag.h  llama-sb.cpp  llama-sb.h  main.cpp  nitro.cpp  rag.hpp  rag_index.cpp  test_main.cpp
llama/samples/: adventure.bas  chat.bas  code.bas  nitro.md  nitro_cli.bas  nitro_picard.md  skills.md
mlpack/: Makefile.am  README.md  main.cpp
mlpack/samples/: data.bas  kmeans.bas  neighborsearch.bas
nuklear/: Makefile.am  main.cpp  nkbd.h
nuklear/samples/: calculator.bas  creating_a_window.bas  demo.bas  display_a_menu.bas  display_two_radio_buttons.bas  draw.bas  dynamic_row_vs_static_row.bas  input_boxes_with_labels.bas  main.bas  overview.bas  placing_a_button.bas
raylib/: Makefile.am  README.md  func-def.h  func.h  main.cpp  mkfunctions.bas  mkraylib.bas  mkreadme.bas  mkreadme.sh  mkskeleton.bas  physac.cpp  physac.h  proc-def.h  proc.h  raygui.cpp
raylib/samples/: audio_module_playing.bas  audio_music_stream.bas  core_2d_camera.bas  core_2d_camera_mouse_zoom.bas  core_2d_platformer.bas  core_3d_camera_first_person.bas  core_automation_events.bas  core_basic_screen_manager.bas  core_basic_window.bas  core_custom_frame_control.bas  core_generating_random_values.bas  core_initialize_3d_camera_free.bas  core_initialize_3d_camera_mode.bas  core_input_gamepad.bas  core_input_input_gestures.bas  core_input_keys.bas  core_input_mouse.bas  core_input_mouse_wheel.bas  core_input_multitouch.bas  core_picking_in_3d.bas  core_scissor_test.bas  core_smooth_pixel_perfect_camera.bas  core_split_screen.bas  core_window_flags.bas  core_window_scale_letterbox.bas  core_window_should_close.bas  core_world_to_screen.bas  gui.bas  just_do.bas  logo.bas  models_animation.bas  physics_demo.bas  physics_friction.bas  physics_movement.bas  physics_restitution.bas  raylib_const.bas  raylibc.bas  sand.bas  shaders_postprocessing.bas  shaders_raymarching.bas  (+22 more)
websocket/: Makefile.am  main.cpp
websocket/samples/: client.bas  passive.bas  receive.bas  send.bas  server.bas
(+16 files in other folders)
